Bug 290702 - Custom mime header fields are not stored
Summary: Custom mime header fields are not stored
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-05 15:35 UTC by Jan Schumacher
Modified: 2012-01-20 10:33 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Schumacher 2012-01-05 15:35:52 UTC
Version:           4.7 (using KDE 4.7.4) 
OS:                Linux

If i add a custom mime header (Configure-->composer-->headers), press "ok" and reopen the dialoge, the custom headers list is empty again.

Reproducible: Always

Steps to Reproduce:
Add a custom mime header. Save and reopen the configure-dialogue. 

Actual Results:  
The before-added custom mime headers are lost.

Expected Results:  
the custom mime headers are saved and used when sending e-mail.

As it seems, the mime headers are stored in kmail2rc without a number/id. 

Example:
[Mime #]
name=User-Agent
value=KMail

If I add the header by hand including a number (#0) it shows up in the configure-dialogue and doesn't get lost and is correctly used when sending email.

Example:

[Mime #0]
name=User-Agent
value=KMail
Comment 1 Christophe Marin 2012-01-05 17:36:35 UTC
Valid in master
Comment 2 Laurent Montel 2012-01-12 07:43:02 UTC
Git commit 0cb01ec600fc2f96104318fdc25b2b80089c0183 by Montel Laurent.
Committed on 12/01/2012 at 08:42.
Pushed by mlaurent into branch 'master'.

Fix Bug 290702 - Custom mime header fields are not stored

FIXED-IN: 4.8.1

M  +1    -1    kmail/configuredialog.cpp

http://commits.kde.org/kdepim/0cb01ec600fc2f96104318fdc25b2b80089c0183
Comment 3 Laurent Montel 2012-01-12 07:45:24 UTC
Git commit 515f27a306f59913e8af2eb886ba28c4b859600a by Montel Laurent.
Committed on 12/01/2012 at 08:42.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 290702 - Custom mime header fields are not stored

FIXED-IN: 4.8.1
(cherry picked from commit 0cb01ec600fc2f96104318fdc25b2b80089c0183)

M  +1    -1    kmail/configuredialog.cpp

http://commits.kde.org/kdepim/515f27a306f59913e8af2eb886ba28c4b859600a
Comment 4 Laurent Montel 2012-01-12 07:46:35 UTC
Git commit 20ea4aa0d135a1a688016f7dc4052d743a4796f7 by Montel Laurent.
Committed on 12/01/2012 at 08:42.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 290702 - Custom mime header fields are not stored

FIXED-IN: 4.8.1
(cherry picked from commit 0cb01ec600fc2f96104318fdc25b2b80089c0183)

M  +1    -1    kmail/configuredialog.cpp

http://commits.kde.org/kdepim/20ea4aa0d135a1a688016f7dc4052d743a4796f7
Comment 5 Dennis Schridde 2012-01-18 23:01:03 UTC
Does "fixed-in: 4.8.1" mean that KDE 4.8.0 will be released containing the bug?
Comment 6 Christophe Marin 2012-01-20 10:16:43 UTC
tagging happened yesterday, the will will likely be in 4.8.0

Please test and report
Comment 7 Laurent Montel 2012-01-20 10:33:36 UTC
If tag was created yesterday so it will fix in 4.8.0.
Regards