Fix Bug 290702 - Custom mime header fields are not stored

FIXED-IN: 4.8.1
BUG: 290702